--- a/src/sip/super_instructions/CMakeLists.txt
+++ b/src/sip/super_instructions/CMakeLists.txt
@@ -21,6 +21,7 @@ set(QM_SOURCE_FILES
     qm/qm-generic/set_ijk_aab.F;
     qm/qm-generic/energy_ty_denominator_rhf.F;
     qm/qm-generic/energy_denominator_rhf.F;
+    qm/qm-generic/energy_denominator.F;
     qm/qm-generic/energy_numerator_rhf.F;
     qm/utility/return_diagonal.F;
     qm/utility/print_block_and_index.F;
@@ -85,6 +86,8 @@ set(QM_SOURCE_FILES
     qm/direct_integral/compute_return_1el_ecp_ints.F;
     qm/direct_integral/return_1el_grdints.F;
     qm/direct_integral/compute_return_1el_grdints.F;
+    qm/direct_integral/return_1el_gradient.F;
+    qm/direct_integral/compute_return_1el_gradient.F;
     qm/direct_integral/return_2el_grdints.F;
     qm/direct_integral/compute_return_2el_grdints.F;
     qm/direct_integral/return_kin_ovl_hessints.F;
