--- a/src/sip/super_instructions/Makefile.am
+++ b/src/sip/super_instructions/Makefile.am
@@ -44,6 +44,7 @@ QM_SOURCE_FILES=\
 ./qm/qm-generic/set_ijk_aab.F\
 ./qm/qm-generic/energy_ty_denominator_rhf.F\
 ./qm/qm-generic/energy_denominator_rhf.F\
+./qm/qm-generic/energy_denominator.F\
 ./qm/qm-generic/energy_numerator_rhf.F\
 ./qm/utility/form_diagonal_unit_matrix.F\
 ./qm/utility/return_diagonal.F\
@@ -90,6 +91,8 @@ QM_SOURCE_FILES=\
 ./qm/direct_integral/compute_return_1el_ecp_grdints.F\
 ./qm/direct_integral/return_1el_grdints.F\
 ./qm/direct_integral/compute_return_1el_grdints.F\
+./qm/direct_integral/return_1el_gradient.F\
+./qm/direct_integral/compute_return_1el_gradient.F\
 ./qm/direct_integral/return_2el_grdints.F\
 ./qm/direct_integral/compute_return_2el_grdints.F\
 ./qm/direct_integral/return_kin_ovl_hessints.F\
