lambda UHF code is ported. Just starting to test it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -602,7 +602,11 @@ set(SIAL_FILES
     src/sialx/qm/ccsd_uhf_defs.sialx;
     src/sialx/qm/ccsd_uhf_vars.sialx;
     src/sialx/qm/diis_4index_ccsd_uhf.sialx; 
-    src/sialx/qm/ccsd_uhf.sialx)
+    src/sialx/qm/ccsd_uhf.sialx;
+    src/sialx/qm/lambda_uhf_defs.sialx;
+    src/sialx/qm/lambda_uhf_vars.sialx;
+    src/sialx/qm/diis_4index_lambda_uhf.sialx; 
+    src/sialx/qm/lambda_uhf.sialx)
 
 #    src/sialx/qm/scf_hess_uhf.sialx;
 #    src/sialx/qm/scf_hess_uhf_defs.sialx)
