--- a/src/sip/super_instructions/CMakeLists.txt
+++ b/src/sip/super_instructions/CMakeLists.txt
@@ -22,6 +22,7 @@ set(QM_SOURCE_FILES
     qm/qm-generic/energy_ty_denominator_rhf.F;
     qm/qm-generic/energy_denominator_rhf.F;
     qm/qm-generic/energy_denominator.F;
+    qm/qm-generic/energy_udenominator.F;
     qm/qm-generic/energy_numerator_rhf.F;
     qm/utility/form_diagonal_unit_matrix.F;
     qm/utility/return_diagonal.F;
