--- a/src/sip/super_instructions/Makefile.am
+++ b/src/sip/super_instructions/Makefile.am
@@ -45,6 +45,7 @@ QM_SOURCE_FILES=\
 ./qm/qm-generic/energy_ty_denominator_rhf.F\
 ./qm/qm-generic/energy_denominator_rhf.F\
 ./qm/qm-generic/energy_denominator.F\
+./qm/qm-generic/energy_udenominator.F\
 ./qm/qm-generic/energy_numerator_rhf.F\
 ./qm/utility/form_diagonal_unit_matrix.F\
 ./qm/utility/return_diagonal.F\
